--- a/ng-routing/src/app/components/characters-list/characters-list.component.html
+++ b/ng-routing/src/app/components/characters-list/characters-list.component.html
@@ -1,3 +1,9 @@
-<p>
-  characters-list works!
-</p>
+<h1>
+  Strwars characters
+</h1>
+
+<ul>
+  <li *ngFor="let character of characters">
+    <app-character [character]="character" ></app-character>
+  </li>
+</ul>
